--- a/modules.html
+++ b/modules.html
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">Name<wbr>And<wbr>Namespace<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L18">name.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L18">name.ts:18</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -133,7 +133,7 @@
 					<div class="tsd-signature tsd-kind-icon">Namespace<wbr>Aliaser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>this<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span>, ns<span class="tsd-signature-symbol">: </span><a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-aliaser.ts#L13">namespace-aliaser.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespace-aliaser.ts#L13">namespace-aliaser.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -179,7 +179,7 @@
 					<div class="tsd-signature tsd-kind-icon">Qualified<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#NameAndNamespace" class="tsd-signature-type" data-tsd-kind="Type alias">NameAndNamespace</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L11">name.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L11">name.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -202,7 +202,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/default.ns.ts#L22">default.ns.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/default.ns.ts#L22">default.ns.ts:22</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -219,7 +219,7 @@
 					<div class="tsd-signature tsd-kind-icon">MathML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespaces.ts#L6">namespaces.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespaces.ts#L6">namespaces.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -234,14 +234,14 @@
 					<div class="tsd-signature tsd-kind-icon">Namespace<wbr>Aliaser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">CxEntry</span><span class="tsd-signature-symbol">&lt;</span><a href="modules.html#NamespaceAliaser" class="tsd-signature-type" data-tsd-kind="Variable">NamespaceAliaser</a><span class="tsd-signature-symbol">, </span><a href="modules.html#NamespaceAliaser" class="tsd-signature-type" data-tsd-kind="Variable">NamespaceAliaser</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-aliaser.ts#L20">namespace-aliaser.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespace-aliaser.ts#L20">namespace-aliaser.ts:20</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Context entry containing global namespace aliaser instance.</p>
+							<p>Global context entry containing namespace aliaser instance.</p>
 						</div>
-						<p>Tracks the most recently provided namespace aliaser. Creates new global namespace aliaser instance by default.</p>
+						<p>Tracks the most recently provided namespace aliaser. Creates new namespace aliaser instance by default.</p>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable">
@@ -250,7 +250,7 @@
 					<div class="tsd-signature tsd-kind-icon">SVG__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespaces.ts#L11">namespaces.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespaces.ts#L11">namespaces.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -265,7 +265,7 @@
 					<div class="tsd-signature tsd-kind-icon">XHTML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespaces.ts#L16">namespaces.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespaces.ts#L16">namespaces.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -280,7 +280,7 @@
 					<div class="tsd-signature tsd-kind-icon">XMLNS__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespaces.ts#L30">namespaces.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespaces.ts#L30">namespaces.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -296,7 +296,7 @@
 					<div class="tsd-signature tsd-kind-icon">XML__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespaces.ts#L23">namespaces.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespaces.ts#L23">namespaces.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -312,7 +312,7 @@
 					<div class="tsd-signature tsd-kind-icon">XSLT__NS<span class="tsd-signature-symbol">:</span> <a href="classes/NamespaceDef.html" class="tsd-signature-type" data-tsd-kind="Class">NamespaceDef</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespaces.ts#L35">namespaces.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespaces.ts#L35">namespaces.ts:35</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -327,7 +327,7 @@
 					<div class="tsd-signature tsd-kind-icon">css__naming<span class="tsd-signature-symbol">:</span> <a href="classes/Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namings.ts#L70">namings.ts:70</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namings.ts#L70">namings.ts:70</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -344,7 +344,7 @@
 					<div class="tsd-signature tsd-kind-icon">default__naming<span class="tsd-signature-symbol">:</span> <a href="classes/Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namings.ts#L18">namings.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namings.ts#L18">namings.ts:18</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -361,7 +361,7 @@
 					<div class="tsd-signature tsd-kind-icon">html__naming<span class="tsd-signature-symbol">:</span> <a href="classes/Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namings.ts#L27">namings.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namings.ts#L27">namings.ts:27</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -378,7 +378,7 @@
 					<div class="tsd-signature tsd-kind-icon">id__naming<span class="tsd-signature-symbol">:</span> <a href="classes/Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namings.ts#L53">namings.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namings.ts#L53">namings.ts:53</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -395,7 +395,7 @@
 					<div class="tsd-signature tsd-kind-icon">xml__naming<span class="tsd-signature-symbol">:</span> <a href="classes/Naming.html" class="tsd-signature-type" data-tsd-kind="Class">Naming</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namings.ts#L44">namings.ts:44</a></li>
+							<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namings.ts#L44">namings.ts:44</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -419,7 +419,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L114">name.ts:114</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L114">name.ts:114</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -459,7 +459,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L28">name.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L28">name.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -492,7 +492,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L54">name.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L54">name.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -525,7 +525,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L77">name.ts:77</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L77">name.ts:77</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -558,7 +558,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L89">name.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L89">name.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -596,7 +596,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/name.ts#L65">name.ts:65</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/name.ts#L65">name.ts:65</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -628,7 +628,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/eef5dcf/src/namespace-aliaser.ts#L45">namespace-aliaser.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/frontmeans/namespace-aliaser/blob/c39cc2d/src/namespace-aliaser.ts#L45">namespace-aliaser.ts:45</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
